--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,8 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   
 }
 
 
-/* .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
 
