--- a/src/slider/Slider.module.scss
+++ b/src/slider/Slider.module.scss
@@ -44,7 +44,12 @@ width: 70%;
      flex-wrap: nowrap;
      flex: none
 }
-
+.lookAllButton:hover{
+    background: rgb(228, 29, 27); 
+    opacity: 75%;
+    border:3px solid #a50202;
+    transform: scale(1.1); 
+}
 .lookAllButtonMedia{
     width: 242px;
     height: 44px;   
