--- a/src/slider/Slider.module.scss
+++ b/src/slider/Slider.module.scss
@@ -1,36 +1,160 @@
+
 .sliderTitle{
 color: rgb(58, 58, 58);
 font-family: IBM Plex Sans;
 src: url('src/assets/fonts/IBMPlexSans-Regular.ttf');
 text-transform: uppercase;
+margin-bottom: 20px;
 }
 .sliderTitleMedia{
     font-size: 44px;
     font-weight: 700;
     line-height: 52px;
 }
-.cardsList{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    margin-left: 10px;
-    margin-top: 40px;
-   margin-bottom: 20px;
+
+.sliderMain{
+  margin: 0;
+  overflow: hidden;
 }
-.styles.slideButtons{
-width: 70%;
+
+.sliderMainMedia{          
+padding-left: 20px;
 }
+   
+.sliderSwiper{
+margin-left: 0;
+}
+.sliderSwiperMedia {
+    width: 320px;
+    padding-bottom: 30px;
+    margin-left: 0;
+  }
+
+  .lookAllButtonMedia{            
+   width: 146px;
+   height: 44px;
+  }
+
+  .blockButton{
+  width: 54px;
+  flex: none;
+  }
+ 
+@media screen and (min-width: 480px) {
+    .sliderSwiperMedia {
+    width: 480px;
+    padding-bottom: 40px;
+  }
+
+  .lookAllButtonMedia{            
+    width: 146px;
+    height: 44px;
+   }
+ 
+   .blockButton{
+   width: 214px;
+   flex: none;
+   }
+}
+  @media screen and (min-width: 768px) {
+    .sliderSwiperMedia {
+      width: 768px;
+      padding-bottom: 40px;
+    }
+
+    .lookAllButtonMedia{            
+      width: 242px;
+      height: 44px;
+     }
+   
+     .blockButton{
+     width: 362px;
+     flex: none;
+     }
+  }
+  
+  
+  @media screen and (min-width: 1024px) {
+    .sliderSwiperMedia {
+      width: 1024px;
+      padding-bottom: 50px;
+    }
+    .lookAllButtonMedia{            
+      width: 242px;
+      height: 44px;
+     }
+   
+     .blockButton{
+     width: 610px;
+     flex: none;
+     }
+  }
+
+  @media screen and (min-width: 1280px) {
+    .sliderSwiperMedia {
+      width: 1280px;
+      padding-bottom: 50px;
+    }
+   
+    .lookAllButtonMedia{            
+      width: 242px;
+      height: 44px;
+     }
+   
+     .blockButton{
+     width: 868px;
+     flex: none;
+     }
+  }
+
+  @media screen and (min-width: 1440px) {
+    .sliderSwiperMedia {
+      width: 1440px;
+      padding-bottom: 30px
+    }
+    
+    .lookAllButtonMedia{            
+      width: 200px;
+      height: 44px;
+     }
+   
+     .blockButton{
+     width: 1040px;
+     flex: none;
+     }
+  }
+
+  @media screen and (min-width: 1920px) {
+    .sliderSwiperMedia {
+      width: 1920px;
+      padding-bottom: 30px
+    }
+    // .sliderMainMedia{          
+    //   margin-left: 240px;
+    //  }
+
+     .lookAllButtonMedia{            
+      width: 242px;
+      height: 44px;
+     }
+   
+     .blockButton{
+     width: 1038px;
+     flex: none;
+     }
+  }
+
+
+
+
 .slideMoveButtons{
     display: flex;
-    text-align: center;
+  
     align-items: center;
     flex-wrap: nowrap;   
 }
 
-.blockButton{
-    width: 1040px;
-    flex: none
-}
+
 .lookAllButton{
     font-size: 15px;
     font-weight: 500;
@@ -44,6 +168,7 @@ width: 70%;
      flex-wrap: nowrap;
      flex: none
 }
+
 .lookAllButton:hover{
     background: rgb(228, 29, 27); 
     opacity: 75%;
@@ -55,37 +180,36 @@ width: 70%;
     height: 44px;   
 }
 
-@media screen and (max-width: 1024px) {
-    .blockButton{
-        width: 680px;
-        flex: none
-    }    
-}
 
-@media screen and (max-width: 480px)  {
-        .lookAllButtonMedia{            
-        width: 146px;
-        height: 44px;
-        }
-        .blockButton{
-        width: 420px;
-        flex: none;
-        }
-        .sliderTitleMedia{
-        font-size: 24px;
-        font-weight: 500;
-        line-height: 125%;
-        }
+    .arrowsButtonsBlock{
+        display: flex;
+        gap: 20px;
+        margin-top: 40px;
+        margin-left: 10px;
+      
     }
-    @media screen and (max-width: 320px) {
-        .blockButton{
-            width: 80px;
-            flex: none
-        }        
+    
+    .arrowsButtons{ 
+        border: none;  
+        height: 45px;
+        width: 45px;
+        cursor: pointer;
+        border-radius: 50%;
+        background-color:rgb(233, 233, 233) ;
+        background-repeat: no-repeat;
+        background-size: 25%;
+        background-position: center center;
+        border-radius: 50%; 
     }
-
-    @media screen and (min-width: 1920px)  {
-        .sliderMain{    
-        margin-left: 12%;
-        }
-     }
+    .arrowsButtons:hover{ 
+        background-color: rgb(200, 200, 200) ;
+        border: 2px solid  rgb(150, 150, 150) ;   
+    }
+    
+    .arrowButtonLeft{    
+        background-image: url('src/assets/icon/left.svg');    
+    }
+    
+    .arrowButtonRight{
+        background-image: url('src/assets/icon/right.svg');    
+    }
