--- a/src/slider/Slider.module.scss
+++ b/src/slider/Slider.module.scss
@@ -15,6 +15,7 @@ margin-bottom: 20px;
 .sliderMain{
   margin: 0;
   overflow: hidden;
+  height: auto;   
 }
 
 .sliderMainMedia{          
@@ -23,6 +24,7 @@ padding-left: 20px;
    
 .sliderSwiper{
 margin-left: 0;
+
 }
 .sliderSwiperMedia {
     width: 320px;
@@ -30,12 +32,16 @@ margin-left: 0;
     margin-left: 0;
   }
 
+  // .cardsForm{
+  //   margin-left: 20px;
+  // }
   .lookAllButtonMedia{            
    width: 146px;
    height: 44px;
   }
 
   .blockButton{
+  
   width: 54px;
   flex: none;
   }
@@ -53,6 +59,7 @@ margin-left: 0;
  
    .blockButton{
    width: 214px;
+   
    flex: none;
    }
 }
@@ -68,7 +75,8 @@ margin-left: 0;
      }
    
      .blockButton{
-     width: 362px;
+     //width: 362px;
+     width: 405px;
      flex: none;
      }
   }
@@ -85,7 +93,8 @@ margin-left: 0;
      }
    
      .blockButton{
-     width: 610px;
+     //width: 610px;
+     width: 640px;
      flex: none;
      }
   }
@@ -102,7 +111,8 @@ margin-left: 0;
      }
    
      .blockButton{
-     width: 868px;
+     //width: 868px;
+     width: 915px;
      flex: none;
      }
   }
@@ -119,7 +129,8 @@ margin-left: 0;
      }
    
      .blockButton{
-     width: 1040px;
+    // width: 1040px;
+     width: 1120px;
      flex: none;
      }
   }
@@ -139,7 +150,8 @@ margin-left: 0;
      }
    
      .blockButton{
-     width: 1038px;
+     //width: 1038px;
+     width: 1145px;
      flex: none;
      }
   }
@@ -164,7 +176,7 @@ margin-left: 0;
     border-radius: 10px;
     border-style: none;
     color: rgb(255, 255, 255);
-     margin-top: 40px; 
+     //margin-top: 20px; 
      flex-wrap: nowrap;
      flex: none
 }
@@ -175,16 +187,16 @@ margin-left: 0;
     border:3px solid #a50202;
     transform: scale(1.1); 
 }
-.lookAllButtonMedia{
-    width: 242px;
-    height: 44px;   
-}
+// .lookAllButtonMedia{
+//     width: 242px;
+//     height: 44px;   
+// }
 
 
     .arrowsButtonsBlock{
         display: flex;
         gap: 20px;
-        margin-top: 40px;
+        //margin-top: 20px;
         margin-left: 10px;
       
     }
