--- a/src/component/cards/Cards.module.scss
+++ b/src/component/cards/Cards.module.scss
@@ -1,12 +1,9 @@
 .cardForm{
     border-radius: 12px;
     background: rgb(255, 255, 255);  
-    height: 700px; 
-    //box-sizing:border-box;
-   //width: 300px;
-   
+    height: 700px;   
    padding-bottom: 30px;
-    border: rgb(39, 30, 199) solid 4px;
+    //border: rgb(39, 30, 199) solid 4px;
 }
 
 .cardsFormMedia{
