--- a/src/slider/Slider.module.scss
+++ b/src/slider/Slider.module.scss
@@ -42,7 +42,14 @@
   width: 54px;
   flex: none;
 }
-
+.swDisplay{
+display: none;
+}
+.cList{
+  display: flex;
+  overflow: auto;
+  gap:10px
+}
 @media screen and (min-width: 480px) {
   .sliderSwiperMedia {
     width: 480px;
